--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
   left: 10%;
   right: 10%;
   position: absolute;
-  background-color:#000000;
+  background-color:#ffffff;
 }
 
 /* Global */
@@ -30,8 +30,8 @@ ul{
 
 /* Header **/
 header{
-  background:#000000;
-  color:#ff7e46;
+  background:#ffffff;
+  color:#000000;
   padding-top:30px;
   min-height:70px;
   border-bottom:#ff7e46 3px solid;
@@ -39,7 +39,7 @@ header{
 }
 
 header a{
-  color:#ffffff;
+  color:#000000;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
