--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ header a:hover{
 #showcase{
   min-height: 400px;
   margin: 5px 0px 5px 0px;
-  background:url('../img/showcase.jpg') no-repeat 0 0;
+  background:url('../video/she.mp4') no-repeat 0 0;
   background-color: #ff7e46;
   background-position:center;
   text-align:center;
